# komoot-to-hammerhead

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  komoot_hammerhead.db  pyproject.toml
src/komoot_hammerhead/: cli.py  config.py  db.py  hammerhead.py  komoot.py  server.py  sync.py
ui/: .env  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js  index.css
ui/src/components/: RouteCard.jsx  StatusBar.jsx
