[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komoot-hammerhead"
version = "0.1.0"
description = "Sync planned routes from Komoot to Hammerhead Karoo"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "httpx>=0.27",
    "komootgpx>=0.1",
    "playwright>=1.40",
    "pydantic-settings>=2.1",
    "uvicorn>=0.27",
]

[project.scripts]
komoot-hh = "komoot_hammerhead.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/komoot_hammerhead"]
